[gd_scene load_steps=2 format=3 uid="uid://u4g0janbib21"]

[ext_resource type="Script" path="res://addons/AudioManager/Singleton/AudioManager.gd" id="1_fuqag"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_fuqag")
audio_extensions = Array[String](["ogg", "wav", "mp3"])
debugging = true

[node name="Adaptive_BGM" type="Node" parent="."]

[node name="Background_Music" type="Node" parent="."]

[node name="Background_Sounds" type="Node" parent="."]
